--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -21,7 +21,7 @@
 							{% csrf_token %}
 							{% if form.errors %}
 								<div class="form-group has-error">
-									<span class="help-block">{{ form.errors }}</span>
+									<span class="help-block">{{ form.text.errors }}</span>
 								</div>
 							{% endif %}
 						</form>
