--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -20,7 +20,7 @@
 							<li class="navbar-text">Logged in as 
 							{{ user.email }}
 							</li>
-							<li><a href="#">Log out</a></li>
+							<li><a href="{% url 'logout' %}">Log out</a></li>
 						</ul>
 					{% else %}
 						<form class="navbar-form navbar-right" 
